--- a/src/main/resources/static/styles/listaProdutoStyle.css
+++ b/src/main/resources/static/styles/listaProdutoStyle.css
@@ -358,9 +358,14 @@ nav ul li a:hover {
         justify-content: center;
         align-items: center;
 
-
 }
-
+/* CSS para a classe position-absolute */
+.position-absolute {
+    position: absolute;
+    top: 50%; /* Coloca o elemento no centro vertical */
+    left: 50%; /* Coloca o elemento no centro horizontal */
+    transform: translate(-50%, -50%); /* Move o elemento de volta para cima e para a esquerda pela metade de sua largura e altura */
+}
 .input-image{
     width: 300px;
     height: 300px;
