--- a/src/main/resources/templates/alterarProduto.html
+++ b/src/main/resources/templates/alterarProduto.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org" xmlns:color="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="shortcut icon" href="../static/imagens/faviconWinery.png" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/sweetalert2.min.js"></script>
     <title>Winery:: Alterar Produto</title>
     <style>
         body{
@@ -34,7 +36,7 @@
     <div class="container fundoTela">
         <p class="text-center fs-1 text-white">Alterar o Cadastro do Produto</p>
         <hr class="text-white">
-        <form th:action="@{/admin/}" method="post" th:object="${produto}" id="formCadastroProduto" enctype="multipart/form-data">
+        <form th:action="@{/admin/alterarProduto}" method="post" th:object="${produto}" id="formCadastroProduto" enctype="multipart/form-data">
             <div class="row">
                 <div class="col-md-6 mb-3">
                     <label for="nome" class="form-label text-white">Nome</label>
@@ -63,17 +65,40 @@
                 <label for="imagem" class="form-label text-white">Imagens</label>
                 <input type="file" class="form-control inputPadrao text-white" id="imagem" name="imagem" multiple required>
             </div>
+            <input type="hidden" id="imagensParaRemover" name="imagensParaRemover">
+            <th:block th:each="imagem, iterStat : ${produto.imagem">
+                <input th:if="${imagem.imagemPrincipal}" type="hidden" id="imagemPrincipalNova" name="imagemPrincipalNova" th:value="${imagem.imagem_id}">
+            </th:block>
             <div id="preview" class="row p-2 justify-content-center">
             </div>
+            <div id="preview2" class="row p-2 justify-content-center">
+                <span class="text-center" style="color: white;">Imagens Cadastradas</span>
+                <div th:each="imagem, iterStat : ${produto.imagens}" class="card p-2 m-1" style="width: 15rem;">
+                    <button type="button" class="btn btn-danger btn-remove m-2" aria-label="Remover" th:data-id="${imagem.id}">Remover</button>
+                    <img th:src="${'/'+imagem.caminho}" alt="Imagem-produto" class="card-img-top">
+                    <div class="card-body d-flex flex-column">
+                        <div class="form-check mt-auto">
+                            <input class="form-check-input" type="radio" name="imgPrincipal" th:id="'imgPrincipalRadio' + ${iterStat.index}" th:value="${imagem.id}" th:checked="${imagem.principal} ? 'checked' : null">
+                            <label class="form-check-label" th:for="'imgPrincipalRadio' + ${iterStat.index}">Imagem principal</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div id="preview" class="row p-2 justify-content-center">
+                </div>
+            </div>
+
+
             <div class="d-flex justify-content-end mt-4">
-                <button type="button" class="btn btn-primary btn-sm me-2 buttonSalvar">Salvar</button>
-                <button type="button" class="btn btn-secondary btn-sm">Cancelar</button>
+                <button type="submit" class="btn btn-primary btn-sm me-2 buttonSalvar">Salvar Alteração</button>
+                <button type="button" href="/admin/listarProdutos" class="btn btn-secondary btn-sm">Cancelar</button>
             </div>
         </form>
     </div>
 
     <script>
-        function updateRadioInputs() {
+      function updateRadioInputs() {
       var preview = document.getElementById('preview');
       var radios = preview.querySelectorAll('.form-check-input');
       var labels = preview.querySelectorAll('.form-check-label');
@@ -190,6 +215,174 @@
         e.preventDefault();
       }
     });
+
+
+
+
+
+
+
+    //---------------------------------------------------------------
+
+
+    document.addEventListener("DOMContentLoaded", function () {
+  const imagemPrincipalNova = document.getElementById("imagemPrincipalNova");
+  const imgPrincipalRadios = document.querySelectorAll(
+    'input[name="imgPrincipal"]'
+  );
+
+  imgPrincipalRadios.forEach((radio, index) => {
+    radio.addEventListener("change", function () {
+      if (this.checked) {
+        imagemPrincipalNova.value = this.value;
+      }
+    });
+  });
+});
+
+document.querySelectorAll(".btn-remove").forEach((btn) => {
+  btn.addEventListener("click", (event) => {
+    const idImagem = event.target.dataset.id;
+    const imagensParaRemover = document.getElementById("imagensParaRemover");
+    imagensParaRemover.value += idImagem + ",";
+    event.target.closest(".card").remove();
+  });
+});
+
+function updateRadioInputs() {
+  var preview = document.getElementById("preview");
+  var radios = preview.querySelectorAll(".form-check-input");
+  var labels = preview.querySelectorAll(".form-check-label");
+  for (var i = 0; i < radios.length; i++) {
+    radios[i].id = "radios" + i;
+    radios[i].value = i;
+    labels[i].htmlFor = "radios" + i;
+  }
+}
+
+function removeImage(card, file) {
+  var input = document.getElementById("imagem");
+  var preview = document.getElementById("preview");
+
+  preview.removeChild(card);
+
+  // Cria um novo objeto de FormData
+  var dataTransfer = new DataTransfer();
+  for (var i = 0; i < input.files.length; i++) {
+    if (input.files[i] !== file) {
+      dataTransfer.items.add(input.files[i]);
+    }
+  }
+
+  // Atualiza o input com os arquivos restantes
+  input.files = dataTransfer.files;
+}
+
+function handleFile(file, i) {
+  if (!file.type.match("image/jpeg") && !file.type.match("image/png")) {
+    alert("Só são permitidos arquivos de imagem (jpg, jpeg, png).");
+    this.value = "";
+    return;
+  }
+
+  var reader = new FileReader();
+
+  reader.onload = function (e) {
+    var img = document.createElement("img");
+    img.src = e.target.result;
+    img.alt = "Imagem-produto";
+    img.className = "card-img-top";
+
+    var cardBody = document.createElement("div");
+    cardBody.className = "card-body d-flex flex-column";
+
+    var formCheck = document.createElement("div");
+    formCheck.className = "form-check mt-auto";
+
+    var radioInput = document.createElement("input");
+    radioInput.className = "form-check-input";
+    radioInput.type = "radio";
+    radioInput.name = "imgPrincipal";
+    radioInput.id = "radios" + i;
+    radioInput.value = i;
+    var radioLabel = document.createElement("label");
+    radioLabel.className = "form-check-label";
+    radioLabel.htmlFor = "radios" + i;
+    radioLabel.textContent = "Imagem principal";
+
+    radioInput.addEventListener("change", function () {
+      if (this.checked) {
+        imagemPrincipalNova.value = "";
+        radioInput.value = this.value;
+      }
+    });
+
+    formCheck.appendChild(radioInput);
+    formCheck.appendChild(radioLabel);
+    cardBody.appendChild(formCheck);
+
+    var closeButton = document.createElement("button");
+    closeButton.type = "button";
+    closeButton.className = "btn-close";
+    closeButton.setAttribute("aria-label", "Close");
+
+    var card = document.createElement("div");
+    card.className = "card p-2 m-1";
+    card.style.width = "15rem";
+    card.appendChild(closeButton);
+    card.appendChild(img);
+    card.appendChild(cardBody);
+
+    closeButton.addEventListener("click", function () {
+      removeImage(card, file);
+      updateRadioInputs();
+    });
+
+    preview.appendChild(card);
+  };
+
+  reader.readAsDataURL(file);
+}
+
+document.body.addEventListener("change", function (event) {
+  if (event.target.id === "imagemInput") {
+    var preview = document.getElementById("preview");
+    preview.innerHTML = "";
+
+    let span = document.createElement("span");
+    span.innerText = "Novas imagens";
+    span.className = "text-center";
+    preview.appendChild(span);
+
+    if (event.target.files.length > 4) {
+      alert("Você só pode selecionar no máximo 4 imagens.");
+      event.target.value = "";
+      return;
+    }
+
+    for (var i = 0; i < event.target.files.length; i++) {
+      handleFile(event.target.files[i], i);
+    }
+  }
+});
+
+document
+  .getElementById("FormsEditarProduto")
+  .addEventListener("submit", function (e) {
+    var radios = document.getElementsByName("imgPrincipal");
+    var formValid = false;
+
+    var i = 0;
+    while (!formValid && i < radios.length) {
+      if (radios[i].checked) formValid = true;
+      i++;
+    }
+
+    if (!formValid) {
+      alert("Por favor, selecione uma imagem principal.");
+      e.preventDefault();
+    }
+  });
     </script>
 </body>
 </html>
