--- a/src/main/resources/templates/alterarProduto.html
+++ b/src/main/resources/templates/alterarProduto.html
@@ -40,33 +40,33 @@
             <div class="row">
                 <div class="col-md-6 mb-3">
                     <label for="nome" class="form-label text-white">Nome</label>
-                    <input type="text" class="form-control inputPadrao" id="nome" name="nomeProduto" maxlength="200" required>
+                    <input type="text" class="form-control inputPadrao" id="nome" name="nomeProduto" maxlength="200" th:value="${produto.nomeProduto}" required>
                 </div>
                 <div class="col-md-6 mb-3">
                     <label for="valor" class="form-label text-white">Valor</label>
-                    <input type="number" class="form-control inputPadrao" id="valor" name="precoProduto" step="0.01" min="1" required>
+                    <input type="number" class="form-control inputPadrao" id="valor" name="precoProduto" step="0.01" min="1"  th:value="${produto.precoProduto}" required>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 mb-3">
                     <label for="quantidade" class="form-label text-white">Quantidade</label>
-                    <input type="number" class="form-control inputPadrao" id="quantidade" name="qtdEstoque" min="1" required>
+                    <input type="number" class="form-control inputPadrao" id="quantidade" name="qtdEstoque" min="1"  th:value="${produto.qtdEstoque}" required>
                 </div>
                 <div class="col-md-6 mb-3">
                     <label for="avaliacao" class="form-label text-white">Avaliação</label>
-                    <input type="number" class="form-control inputPadrao" id="avaliacao" name="avaliacaoProduto" min="0" max="5" step="0.5" required>
+                    <input type="number" class="form-control inputPadrao" id="avaliacao" name="avaliacaoProduto" min="0" max="5" step="0.5" th:value="${produto.avaliacaoProduto}" required>
                 </div>
             </div>
             <div class="mb-3">
                 <label for="descricao" class="form-label text-white">Descrição</label>
-                <textarea class="form-control inputPadrao" id="descricao" name="descricaoProduto" rows="4" maxlength="2000"></textarea>
+                <textarea class="form-control inputPadrao" id="descricao" name="descricaoProduto" rows="4" maxlength="2000"   th:value="${produto.descricaoProduto}" required></textarea>
             </div>
             <div class="mb-3">
                 <label for="imagem" class="form-label text-white">Imagens</label>
                 <input type="file" class="form-control inputPadrao text-white" id="imagem" name="imagem" multiple required>
             </div>
             <input type="hidden" id="imagensParaRemover" name="imagensParaRemover">
-            <th:block th:each="imagem, iterStat : ${produto.imagem">
+            <th:block th:each="imagem, iterStat : ${produto.imagens}">
                 <input th:if="${imagem.imagemPrincipal}" type="hidden" id="imagemPrincipalNova" name="imagemPrincipalNova" th:value="${imagem.imagem_id}">
             </th:block>
             <div id="preview" class="row p-2 justify-content-center">
@@ -74,11 +74,11 @@
             <div id="preview2" class="row p-2 justify-content-center">
                 <span class="text-center" style="color: white;">Imagens Cadastradas</span>
                 <div th:each="imagem, iterStat : ${produto.imagens}" class="card p-2 m-1" style="width: 15rem;">
-                    <button type="button" class="btn btn-danger btn-remove m-2" aria-label="Remover" th:data-id="${imagem.id}">Remover</button>
-                    <img th:src="${'/'+imagem.caminho}" alt="Imagem-produto" class="card-img-top">
+                    <button type="button" class="btn btn-danger btn-remove m-2" aria-label="Remover" th:data-id="${imagem.imagem_id}">Remover</button>
+                    <img th:src="${'/'+imagem.url}" alt="Imagem-produto" class="card-img-top">
                     <div class="card-body d-flex flex-column">
                         <div class="form-check mt-auto">
-                            <input class="form-check-input" type="radio" name="imgPrincipal" th:id="'imgPrincipalRadio' + ${iterStat.index}" th:value="${imagem.id}" th:checked="${imagem.principal} ? 'checked' : null">
+                            <input class="form-check-input" type="radio" name="imgPrincipal" th:id="'imgPrincipalRadio' + ${iterStat.index}" th:value="${imagem.imagem_id}" th:checked="${imagem.imagemPrincipal} ? 'checked' : null">
                             <label class="form-check-label" th:for="'imgPrincipalRadio' + ${iterStat.index}">Imagem principal</label>
                         </div>
                     </div>
