--- a/src/main/resources/static/styles/listaUsuarioStyle.css
+++ b/src/main/resources/static/styles/listaUsuarioStyle.css
@@ -7,70 +7,74 @@ body{
 
 }
 .card {
-    border: 1px solid #ddd;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    max-width: 90%;
-    border-radius: 14px;
-    margin: 0 auto;
-    margin-bottom: 30px;
-    padding: 10px;
-    background: linear-gradient(to bottom, #000000, #000000f0);
+    border: 1px solid #ddd !important;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2) !important;
+    max-width: 90% !important;
+    border-radius: 14px !important;
+    margin: 0 auto !important;
+    margin-bottom: 30px !important;
+    margin-top: 50px !important;
+    padding: 10px !important;
+    background: linear-gradient(to bottom, #000000, #000000f0) !important;
 }
 
 .card-header {
-    color: white;
-    padding: 10px;
-    text-align: center;
+    color: white !important;
+    padding: 10px !important;
+    text-align: center !important;
 }
 
 .table {
-    border-collapse: collapse;
-    width: 100%;
+    border-collapse: collapse !important;
+    width: 100% !important;
 }
 
 .table .th, .table td {
-    border: 1px solid #ddd;
-    text-align: left;
-    font-size: 20px;
-    padding: 8px;
-    color: #fff;
+    border: 1px solid #ddd !important;
+    text-align: left !important;
+    font-size: 20px !important;
+    padding: 8px !important;
+    color: #fff !important;
+    background-color: transparent !important;
 }
 
 
 
 .botoes-div{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    display: flex !important;
+    justify-content: space-between !important;
+    align-items: center !important;
 }
 
 .botoes{
-    background: transparent;
-    border-radius: 20px;
-    outline: none;
-    border: 4px solid transparent ;
-    border-image: linear-gradient(to bottom, #4F0599, #7A0707) 1;
-    color: white;
-    height: 30px;
-    width: 90px;
-    margin-bottom: 3px;
-    cursor: pointer;
+    background: transparent !important;
+    border-radius: 20px !important;
+    outline: none !important;
+    border: 4px solid transparent !important;
+    border-image: linear-gradient(to bottom, #4F0599, #7A0707) 1 !important;
+    color: white !important;
+    height: auto !important;
+    width: auto !important;
+    margin-bottom: 3px !important;
+    padding: 1px !important;
+    cursor: pointer !important;
+    font-size: 15px !important;
 }
 
 
 
 .table tr:nth-child(even) {
-    background: linear-gradient(to bottom, #292929, #202020c5);
+    background: linear-gradient(to bottom, #292929, #202020c5) !important;
 }
 
 .table th {
-    background: linear-gradient(to bottom, #4F0599, #7A0707);
+    background: linear-gradient(to bottom, #4F0599, #7A0707) !important;
     color: white;
 }
 .table button{
-    margin-left: 5px;
+    margin-left: 5px !important;
 }
-header {
+/* header {
     background: linear-gradient(to bottom, #000000, #000000f0);
     color: #fff;
     padding: 10px 0;
@@ -112,11 +116,11 @@ nav ul li a:hover {
 
 
 .containerHeader {
-    width: 100%;
-    text-align: center;
-    margin-bottom: 25px;
+    width: 100% !important;
+    text-align: center !important;
+    margin-bottom: 25px !important;
 
-}
+} */
 
 .buttonSearch{
     width: 100px;
@@ -172,13 +176,13 @@ nav ul li a:hover {
     border: none;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&family=Open+Sans:wght@300;400;500;600&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&family=Open+Sans:wght@300;400;500;600&display=swap');
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+    padding: 0 !important;
+    margin: 0 !important;
+    box-sizing: border-box ;
     font-family: 'Inter', sans-serif;
-}
+} */
 
 
 .tituloForm{
@@ -186,7 +190,7 @@ nav ul li a:hover {
     color: white;
 }
 
-.container {
+.containerBoa {
     width: 80%;
     height: 80%;
     margin: auto;
@@ -435,4 +439,30 @@ nav ul li a:hover {
     width: 300px;
     height: 300px;
 }
+
+.bodyModal{
+    background-color: #000000f0;
+}
+
+.buttonSalvar{
+    background: linear-gradient(to bottom, #4F0599, #7A0707) !important;
+    color: #fff !important;
+    border: none !important;
+}
+
+.inputPadrao{
+    border: none !important;
+    box-shadow: 1px 1px 6px #0000001c !important;
+    border-bottom: 1px solid #ccc !important;
+    color: white !important;
+    background-color: transparent !important;
+}
+.inputPadrao:focus{
+    background-color: #000000f0 !important;
+    color: white !important;
+}
+.corFundo {
+    background-color: #0B0B0B;
+  }
+
 
