--- a/src/main/resources/templates/listaProdutoEstoquista.html
+++ b/src/main/resources/templates/listaProdutoEstoquista.html
@@ -21,7 +21,7 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary corFundo">
     <div class="container">
-        <a class="navbar-brand" href="/home">
+        <a class="navbar-brand" href="/homeEstoque">
             <img th:src="@{/imagens/logoWinery250x250new.png}" width="150px" alt="Logo da Winery">
         </a>
 
