--- a/src/main/resources/templates/alterarProduto.html
+++ b/src/main/resources/templates/alterarProduto.html
@@ -36,8 +36,11 @@
     <div class="container fundoTela">
         <p class="text-center fs-1 text-white">Alterar o Cadastro do Produto</p>
         <hr class="text-white">
+        <div id="modalMessages" class="position-absolute"></div>
+
         <form th:action="@{/admin/alterarProduto}" method="post" th:object="${produto}" id="formCadastroProduto" enctype="multipart/form-data">
             <input type="hidden" id="id" name="idProduto" th:value="${produto.idProduto}">
+            <input type="hidden" id="statusProduto" name="statusProduto" th:value="${produto.statusProduto}" >
             <div class="row">
                 <div class="col-md-6 mb-3">
                     <label for="nome" class="form-label text-white">Nome</label>
@@ -65,9 +68,10 @@
 
             <div class="mb-3">
                 <label for="imagem" class="form-label text-white">Imagens</label>
-                <input type="file" class="form-control inputPadrao text-white" id="imagem" name="imagemInput" multiple required>
+                <input type="file" class="form-control inputPadrao text-white" id="imagem" name="imagemInput" multiple>
             </div>
             <input type="hidden" id="imagensParaRemover" name="imagensParaRemover">
+            
             <th:block th:each="imagem, iterStat : ${produto.imagens}">
                 <input th:if="${imagem.imagemPrincipal}" type="hidden" id="imagemPrincipal" name="imagemPrincipalNova" th:value="${imagem.imagem_id}">
             </th:block>
@@ -76,7 +80,6 @@
             <div id="preview2" class="row p-2 justify-content-center">
                 <span class="text-center" style="color: white;">Imagens Cadastradas</span>
                 <div th:each="imagem, iterStat : ${produto.imagens}" class="card p-2 m-1" style="width: 15rem;">
-                    <button type="button" class="btn btn-danger btn-remove m-2" aria-label="Remover" th:data-id="${imagem.imagem_id}">Remover</button>
                     <img th:src="${'/'+imagem.url}" alt="Imagem-produto" class="card-img-top">
                     <div class="card-body d-flex flex-column">
                         <div class="form-check mt-auto">
