--- a/src/main/resources/templates/exibirProduto.html
+++ b/src/main/resources/templates/exibirProduto.html
@@ -115,7 +115,7 @@ body{
                 </li>
 
             </ul>
-            <form class="d-flex" role="search">
+            <form class="d-flex ml-auto" role="search">
                 <a class="nav-link text-white" href="/authentication/logout">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
@@ -175,6 +175,9 @@ body{
                     <li data-target="#image-carousel" data-slide-to="2"></li>
                 </ol>
                 <div class="carousel-inner">
+                    <th:block th:each="imagem, iterStat : ${produto.imagens}">
+                        <img th:src="${'/'+imagem.caminho}" alt="Slide" th:data-bs-slide-to="${iterStat.index}" th:class="${imagem.principal} ? 'active' : ''">
+                      </th:block>
                     <div class="carousel-item active">
                         <img src="imagem2.jpg" class="rounded mx-auto d-block custom-carousel-image"
                              alt="Imagem 1" onclick="atualizarImagemPrincipal('imagem2.jpg')">
