--- a/src/main/resources/templates/listaProduto.html
+++ b/src/main/resources/templates/listaProduto.html
@@ -8,13 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="../jquery/jquery.min.js"></script>
-    <script src="../jquery/jquery.mask.min.js"></script>
-    <script src="../js/bootstrap.bundle.min.js"></script>
-    <script src="../js/popper.min.js"></script>
+   
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.10.2/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+   
     <title>Winery:: Lista Produtos</title>
 </head>
 <body>
@@ -193,7 +189,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                    <button type="submit" class="btn btn-primary buttonSalvar">Salvar alteração</button>
+                    <button type="submit" class="btn btn-primary buttonSalvar" id="botaoSalvar">Salvar alteração</button>
                   </div>
               </form>
         </div>
@@ -368,19 +364,21 @@ $(document).ready(function () {
     $('#formCadastroProduto').on('submit', function (event) {
         event.preventDefault();
 
-        var formData = $(this).serialize();
-        var modal = $('#myModal');
+        var formData = new FormData(this);
+        var modal = $('#exampleModal');
 
         $.ajax({
             type: 'POST',
             url: '/admin/cadastrarProdutos',
             data: formData,
+            processData: false, // Não processar os dados		
+            contentType: false, // Não configurar o tipo de conteúdo
             success: function (data) {
                 $('#modalMessages').empty();
 
                 if (data.startsWith('Sucesso:')) {
                     var mensagemSucesso = data.replace('Sucesso:', '');
-                    $('#modalMessages').append('<div class="alert alert-success" role="alert" data-toggle="popover" data-trigger="manual" data-placement="top">' + mensagemSucesso + '</div>').find('.alert').popover('show');
+                    $('#modalMessages').append('<div class="alert alert-success" role="alert">' + mensagemSucesso + '</div>');
 
                     $('#formCadastroProduto')[0].reset();
 
@@ -407,6 +405,7 @@ $(document).ready(function () {
         $('#modalMessages .alert').popover('hide');
     });
 });
+
 
 </script>
 
