--- a/src/main/resources/templates/exibirProduto.html
+++ b/src/main/resources/templates/exibirProduto.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Inclua o CSS e o jQuery -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery..min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
@@ -21,9 +21,8 @@
     <!--        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"-->
     <!--        crossorigin="anonymous"></script>-->
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <title>Winery:: Produto</title>
 </head>
 <style>
@@ -90,7 +89,7 @@ body{
         <a class="navbar-brand" href="#">
             <img th:src="@{/imagens/logoWinery250x250new.png}" width="150px" alt="Logo da Winery">
         </a>
-
+        
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -133,9 +132,12 @@ body{
     <h1 class="text-center" th:text="${produto.nomeProduto}"></h1>
     <hr>
     <div class="row">
-        <div class="col-md-6">
-            <img id="imagemPrincipal" src="./imagem2.jpg" class="rounded mx-auto d-block tamanho-imagem-principal" alt="...">
-        </div>
+        <th:block th:each="imagem, iterStat : ${produto.imagens}">
+            <div th:if="${imagem.imagemPrincipal}"  class="col-md-6">
+                <img id ='imagemPrincipal' th:src="${'/'+imagem.url}"  class="rounded mx-auto d-block tamanho-imagem-principal" alt="...">
+            </div>
+        </th:block>
+
         <div class="col-md-6">
             <form class="form-horizontal">
                 <div class="form-group price_elem row">
@@ -170,23 +172,17 @@ body{
         <div class="col-md-12">
             <div id="image-carousel" class="carousel slide tamanho-carousel" data-ride="carousel">
                 <ol class="carousel-indicators">
-                    <li data-target="#image-carousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#image-carousel" data-slide-to="1"></li>
-                    <li data-target="#image-carousel" data-slide-to="2"></li>
+                    <th:block th:each="imagem, iterStat : ${produto.imagens}">
+                        <li data-target="#image-carousel" th:data-bs-slide-to="${iterStat.index}" th:class="${imagem.imagemPrincipal} ? 'active' : ''"></li>
+                    </th:block>
                 </ol>
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="imagem2.jpg" class="rounded mx-auto d-block custom-carousel-image"
-                             alt="Imagem 1" onclick="atualizarImagemPrincipal('imagem2.jpg')">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="imagem2.jpg" class="rounded mx-auto d-block custom-carousel-image"
-                             alt="Imagem 2" onclick="atualizarImagemPrincipal('imagem2.jpg')">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="imagem3.jpg" class="rounded mx-auto d-block custom-carousel-image"
-                             alt="Imagem 3" onclick="atualizarImagemPrincipal('imagem3.jpg')">
-                    </div>
+                    <th:block th:each="imagem, iterStat : ${produto.imagens}">
+                        <div class="carousel-item active" >
+                            <img th:src="${'/'+imagem.url}" class="rounded mx-auto d-block custom-carousel-image"
+                            th:alt="${'Imagem' + iterStat.index}" th:data-imagem-url="${imagem.url}" onclick="atualizarImagemPrincipal(this)">
+                        </div>
+                    </th:block>
                 </div>
                 <a class="carousel-control-prev" href="#image-carousel" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -202,8 +198,12 @@ body{
 </div>
 
 <script>
-        function atualizarImagemPrincipal(imagem) {
-            document.getElementById('imagemPrincipal').src = imagem;
+        function atualizarImagemPrincipal(element) {
+            
+         var url = element.getAttribute('data-imagem-url')
+         console.info(url)
+         var imagem = document.getElementById('imagemPrincipal');
+            imagem.src = url;
         }
     </script>
 <script>
