--- a/src/main/resources/static/styles/listaProdutoStyle.css
+++ b/src/main/resources/static/styles/listaProdutoStyle.css
@@ -79,7 +79,7 @@ header {
     align-items: center !important;
 }
 
-/* nav ul {
+ nav ul {
     list-style: none !important;
     display: flex !important;
 }
@@ -96,7 +96,7 @@ nav ul li a {
 
 nav ul li a:hover {
     border-bottom: 2px solid #fff !important;
-} */
+}
 
 .search-bar {
     display: flex;
