--- a/src/main/resources/templates/landingPageProduto.html
+++ b/src/main/resources/templates/landingPageProduto.html
@@ -15,47 +15,58 @@
 color: lightgray; /* Cor das estrelas inativas */
 cursor: pointer;
 }
-  .corFundo {
-    background: linear-gradient(to bottom, #000000, #000000f0);
-  }
-  .corButtonPadrao {
-    background: linear-gradient(to bottom, #4F0599, #7A0707);
-    color: #fff;
-    border: none;
-    width: 200px;
-  }
+.corFundo {
+background: linear-gradient(to bottom, #000000, #000000f0);
+}
+.corButtonPadrao {
+background: linear-gradient(to bottom, #4F0599, #7A0707);
+color: #fff;
+border: none;
+width: 200px;
+}
 
-  .cardsProduto{
-    margin-top: 15px;
-    margin-left: 30px;
-    margin-bottom: 15px;
+.cardsProduto{
+margin-top: 15px;
+margin-left: 30px;
+margin-bottom: 15px;
 
-  }
-  .footerWinery{
-    margin-top: 30px;
-    background: linear-gradient(to bottom, #000000, #000000f0);;
-  }
+}
+.footerWinery{
+margin-top: 30px;
+background: linear-gradient(to bottom, #000000, #000000f0);;
+}
 
-<!--     .card-text-limit {-->
-<!--        display: -webkit-box;-->
-<!--        -webkit-line-clamp: 2;-->
-<!--        -webkit-box-orient: vertical;-->
-<!--        overflow: hidden;-->
-<!--        text-overflow: ellipsis;-->
-<!--    }-->
+ nav ul {
+    list-style: none !important;
+    display: flex !important;
+}
 
-    /* Define uma largura fixa para todos os cards */
-    .card {
-        width: 280px;
-        margin: 10px;
-    }
+nav ul li {
+    margin: 0 15px !important;
+}
 
-    /* Ajusta o layout dos cards para 4 por linha */
-    .cards-row {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
+nav ul li a {
+    text-decoration: none !important;
+    color: #fff !important;
+    font-size: 18px !important;
+}
+
+nav ul li a:hover {
+    border-bottom: 2px solid #fff !important;
+}
+
+/* Define uma largura fixa para todos os cards */
+.card {
+    width: 280px;
+    margin: 10px;
+}
+
+/* Ajusta o layout dos cards para 4 por linha */
+.cards-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 
 </style>
 <body class="corFundo">
